--- a/project/sakura-kcs/pull-request/20250918_fix.md
+++ b/project/sakura-kcs/pull-request/20250918_fix.md
@@ -4,10 +4,10 @@
 - チャットフォームの+ボタンを押してファイルをアップロードする際に、オプションタブを押下すると非対応形式のファイルも選択可能となり、そのままアップロードしても何もエラーメッセージなどが表示されないままアップロードが完了してしまう
 
 ### 変更後
-- チャットフォームの+ボタンを押してファイルをアップロードする際、非対応形式のファイルをアップロードすると、エラーメッセージが表示されてアップロードができないように変更
+- チャットフォームの+ボタンを押してファイルをアップロードする際、非対応形式のファイルを1つ以上含めてアップロードすると、エラーメッセージが表示されてアップロードができないように変更
 - エラーメッセージは、`対応していない形式のファイルが含まれています。\n(対応形式: csv, docx, gif, jpeg, jpg, md, mdx, pdf, png, txt)`とした
 - 上記のメッセージと整合をとるため、他の`対応していないファイル形式です`というエラーメッセージを、`対応していない形式のファイルが含まれています。`とした
-- エラーメッセージの表示処理を、`ファイルを「ドラッグ＆ドロップ」したとき、またはファイル選択ボタン（FileUploaderButton）でファイルを選択したとき`と`チャット入力欄（textarea）で「Ctrl+V」や「Cmd+V」などでファイルをペーストしたとき`で共通化
+- エラーメッセージの表示処理を、`ファイルを「ドラッグ＆ドロップ」したとき(現在は無効?)、またはファイル選択ボタン（FileUploaderButton）でファイルを選択したとき`と`チャット入力欄（textarea）で「Ctrl+V」や「Cmd+V」などでファイルをペーストしたとき`で共通化
 
 
 ## 変更目的
@@ -16,25 +16,125 @@
 
 
 ## 動作確認
+### +ボタンからアップロードする場合
+- 正常ケース1: 1つの対応形式のファイルを+ボタンからアップロード
+- 正常ケース2: 複数の対応形式のファイルを+ボタンからアップロード
+
+- 異常ケース1: 1つの`非対応形式`のファイルを+ボタンからアップロード
+- 異常ケース2: 複数ファイル(`非対応形式`ファイル >=1 を含む)を+ボタンからアップロード
+- 異常ケース3: 1つの`非対応形式`&`ファイルサイズ超過`ファイルを、+ボタンからアップロード
+- 異常ケース4: 複数のファイル(`非対応形式`&`ファイルサイズ超過`ファイル >=1を含む)を+ボタンからアップロード
+- 異常ケース5: 複数のファイル(`非対応形式`ファイル >=1 & `ファイルサイズ超過`ファイル >=1 を含む)を+ボタンからアップロード
+
+### チャットフォームにコピー&ペーストする場合
+- 正常ケース1: 1つの対応形式のファイルをコピー&ペースト
+- 正常ケース2: 複数の対応形式のファイルをコピー&ペースト
+
+- 異常ケース1: 1つの`非対応形式`のファイルをコピー&ペースト
+- 異常ケース2: 複数のファイル(`非対応形式`ファイル >=1 を含む)のファイルをコピー&ペースト
+- 異常ケース3: 1つの`非対応形式`&`ファイルサイズ超過`ファイルを、コピー&ペースト
+- 異常ケース4: 複数のファイル(`非対応形式`&`ファイルサイズ超過`ファイル >=1を含む)をコピー&ペースト
+- 異常ケース5: 複数のファイル(`非対応形式`ファイル >=1 & `ファイルサイズ超過`ファイル >=1 を含む)をコピー&ペースト
+
+
 
 ### before
-- チャットフォーム内の+ボタンを押下
-- オプションで、`すべてのファイル`を選択
-- 非対応形式のファイルを選択してアップロード
-- そのままアップロードが完了し、エラーメッセージも表示されない
 
-https://github.com/user-attachments/assets/36e3e5fc-186b-4c73-ac3f-9079f579c007
+#### +ボタンからアップロードする場合
+
+##### 正常ケース1 & 異常ケース1
+https://github.com/user-attachments/assets/3a846b8d-1533-4e87-a55a-33139573898f
+
+- 非対応形式のファイルをアップロードしようとしても、そのままアップロードが完了し、エラーメッセージも表示されない
+
+##### 正常ケース2 & 異常ケース2
+https://github.com/user-attachments/assets/28a8af33-0207-4063-b755-ca50ab45add5
+
+- 非対応形式のファイルが1つ以上含まれている場合でも、そのままアップロードが完了し、エラーメッセージも表示されない
+
+##### 異常ケース3 & 異常ケース4 & 異常ケース5
+https://github.com/user-attachments/assets/ce12e0ed-6237-4108-bdfc-247c9cdcdd67
+
+- 異常ケース3
+    - 1つの`非対応形式`&`ファイルサイズ超過`ファイルが含まれている場合は、サイズ超過のファイルが含まれている旨を伝えるエラーメッセージが表示され、アップロードされない
+- 異常ケース4
+    - 複数ファイル(`非対応形式`&`ファイルサイズ超過`ファイル >=1を含む)をアップロードしようとすると、正常なファイルのみアップロードされ、サイズ超過のファイルが含まれている旨を伝えるエラーメッセージが表示される
+- 異常ケース5
+    - 複数のファイル(`非対応形式`ファイル >=1 & `ファイルサイズ超過`ファイル >=1 を含む)をアップロードしようとすると、正常なファイルと`非対応形式`ファイルのみアップロードされ、サイズ超過のファイルが含まれている旨を伝えるエラーメッセージが表示される
+
+
+#### チャットフォームにコピー&ペーストする場合
+
+##### 正常ケース1 & 異常ケース1
+https://github.com/user-attachments/assets/f3c5cdaa-968e-4541-80a2-f674453decc7
+
+- 1つのファイルをアップロードしようとすると、ファイルの形式にかかわらずファイル形式エラーが表示され、アップロードされない
+
+##### 正常ケース2 & 異常ケース2
+https://github.com/user-attachments/assets/a1c59e96-f790-4d3f-8736-8897b69bd96f
+
+- 非対応形式のファイルが1つ以上含まれている場合でも、含まれていない場合でも、ファイル形式エラーが表示され、全てのファイルがアップロードされない
+
+##### 異常ケース3 & 異常ケース4 & 異常ケース5
+https://github.com/user-attachments/assets/8172adb0-c23e-47b9-84e0-d3543b71abf0
+
+- 非対応形式のファイルが1つ以上含まれている場合でも、含まれていない場合でも、ファイル形式エラーが表示され、全てのファイルがアップロードされない
+
+
 
 
 ### after
-- チャットフォーム内の+ボタンを押下
-- オプションで、`すべてのファイル`を選択
-- 非対応形式のファイルを選択してアップロード
-- エラーメッセージが表示され、当該ファイルはアップロードされない
 
-https://github.com/user-attachments/assets/b350aa4a-331a-4e86-8f32-a274c67a0dce
+#### +ボタンからアップロードする場合
+
+##### 正常ケース1 & 異常ケース1
+https://github.com/user-attachments/assets/1b20a709-0a3a-4d99-8afd-a02073759f87
+
+- 非対応形式のファイルを1つアップロードしようとすると、非対応形式のファイルが含まれている旨を伝えるエラーメッセージが表示され、アップロードされない
+
+##### 正常ケース2 & 異常ケース2
+https://github.com/user-attachments/assets/f6710c2c-0e42-4741-a648-d4f4b373046a
+
+- 非対応形式のファイルが1つ以上含まれている場合は、非対応形式のファイルが含まれている旨を伝えるエラーメッセージが表示され、全てのファイルがアップロードされない
+
+##### 異常ケース3 & 異常ケース4 & 異常ケース5
+https://github.com/user-attachments/assets/ec9ed76b-b697-4a90-968e-10e882a9eb8e
+
+- 異常ケース3
+    - 1つの`非対応形式`&`ファイルサイズ超過`ファイルが含まれている場合は、サイズ超過のファイルが含まれている旨を伝えるエラーメッセージが表示され、アップロードされない
+- 異常ケース4
+    - 複数ファイル(`非対応形式`&`ファイルサイズ超過`ファイル >=1を含む)をアップロードしようとすると、正常なファイルのみアップロードされ、サイズ超過のファイルが含まれている旨を伝えるエラーメッセージが表示される
+- 異常ケース5
+    - 複数のファイル(`非対応形式`ファイル >=1 & `ファイルサイズ超過`ファイル >=1 を含む)をアップロードしようとすると、非対応形式のファイルが含まれている旨を伝えるエラーメッセージが表示され、全てのファイルがアップロードされない
+
+
+
+
+#### チャットフォームにコピー&ペーストする場合
+
+##### 正常ケース1 & 異常ケース1
+https://github.com/user-attachments/assets/6524ec11-2654-41f6-837e-83a87124f404
+
+- 非対応形式のファイルを1つアップロードしようとすると、非対応形式のファイルが含まれている旨を伝えるエラーメッセージが表示され、アップロードされない
+
+
+##### 正常ケース2 & 異常ケース2
+https://github.com/user-attachments/assets/2f72e77d-fd50-4e85-a56d-819d41767e35
+
+- 非対応形式のファイルが1つ以上含まれている場合は、非対応形式のファイルが含まれている旨を伝えるエラーメッセージが表示され、全てのファイルがアップロードされない
+
+##### 異常ケース3 & 異常ケース4 & 異常ケース5
+https://github.com/user-attachments/assets/35301994-4c3f-4cbc-a5cd-33b39a2ba49b
+
+- 異常ケース3
+    - 1つの`非対応形式`&`ファイルサイズ超過`ファイルが含まれている場合は、非対応形式のファイルが含まれている旨を伝えるエラーメッセージが表示され、アップロードされない
+- 異常ケース4
+    - 複数ファイル(`非対応形式`&`ファイルサイズ超過`ファイル >=1を含む)をアップロードしようとすると、非対応形式のファイルが含まれている旨を伝えるエラーメッセージが表示され、全てのファイルがアップロードされない
+- 異常ケース5
+    - 複数のファイル(`非対応形式`ファイル >=1 & `ファイルサイズ超過`ファイル >=1 を含む)をアップロードしようとすると、非対応形式のファイルが含まれている旨を伝えるエラーメッセージが表示され、全てのファイルがアップロードされない
 
 
 
 ## 特にレビューしてほしいところ
 - 他のエラーメッセージとの整合性が取れているか
+- エラーメッセージの表示処理を、`ファイルを「ドラッグ＆ドロップ」したとき、またはファイル選択ボタン（FileUploaderButton）でファイルを選択したとき`と`チャット入力欄（textarea）で「Ctrl+V」や「Cmd+V」などでファイルをペーストしたとき`で共通化して問題ないか
